<resources>
    <string name="app_name">TechInstHub</string>
    <string name="home">Главная</string>
    <string name="profile">Профиль</string>
    <string name="chats">Чаты</string>
    <string name="projects">Проекты</string>
    <string name="intern">Стажировки</string>
    <string name="meetings">Мероприятия</string>
    <string name="community">Сообщество</string>
    <string name="news">Новости</string>
    <string name="settings">Настройки</string>
    <string name="help">Поддержка</string>
    <string name="add">Добавить</string>
    <string name="topic_web">Web-разработка</string>
    <string name="topic_ml">Машинное обучение</string>
    <string name="topic_system_administration">Администрирование систем</string>
    <string name="topic_bigdata">Большие данные</string>
    <string name="topic_database">Базы данных</string>
    <string name="topic_analytics">Аналитика</string>
    <string name="topic_android">Android-разработка</string>
    <string name="topic_other">Другое</string>
    <string name="status">Статус</string>
    <string name="short_description">Короткое описание (1–2 предложения)</string>
    <string name="status_completed">завершен</string>
    <string name="status_open">открыт</string>
    <string name="status_in_progress">в процессе</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="registration">Регистрация</string>
    <string name="endofprojects">Кажется проектов больше нет!\nВозвращайтесь позднее и они обязательно появятся</string>
    <string name="noprojects">Проекты не найдены</string>
    <string name="changefilter">Попробуйте изменить фильтры или поисковый запрос</string>
    <string name="faculty">Факультет</string>
    <string name="group_number">Номер вашей группы</string>
    <string name="your_name">Как вас зовут?</string>
    <string name="surname">Фамилия</string>
    <string name="enable_account">Уже есть аккаунт? Вход</string>
</resources>