<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etProjectTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Название проекта"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Выбрать тему:"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:singleSelection="false"
            app:chipSpacing="8dp">

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic_web"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic_ml"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic_system_administration"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic_database"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic_analytics"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic_android"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic_other"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>
        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etShortDescription"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:hint="@string/short_description"
                android:gravity="top"
                android:inputType="textMultiLine"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <RadioGroup
            android:id="@+id/radioGroupStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="32dp">

            <RadioButton
                android:id="@+id/rbCompleted"
                android:text="@string/status_completed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/rbOpen"
                android:text="@string/status_open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rbInProgress"
                android:text="@string/status_in_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddProject"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:backgroundTint="@null"
            android:textColor="@color/black"
            android:background="@drawable/btn_yellow"
            android:text="@string/add"
            app:cornerRadius="28dp"
            style="@style/Widget.MaterialComponents.Button" />

    </LinearLayout>
</ScrollView>